[tool.poetry]
name = "dronebase"
version = "0.1.0"
description = ""
authors = ["Anuj Singh Solanki <anujsinghsolanki1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
