[tool.poetry]
name = "dronebase"
version = "0.1.0"
description = ""
authors = ["Anuj Singh Solanki <anujsinghsolanki1999@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
bcrypt = "^3.2.2"
getch = "^1.0"

[tool.poetry.dev-dependencies]
unittest = "^0.0"
discover = "^0.4.0"
coverage = "^6.4.1"

[tool.poetry.scripts]
test-unit = "coverage run -m unittest discover tests -v"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
